# picocalc-umac

./: .gitmodules  CMakeLists.txt  README.md  gen-rom.sh
discs/: macpaint.img  micropython.img
include/: video.h
src/: font.h  hid.c  kbd.c  keyboard.c  keyboard.h  lcd.c  lcd.h  lcd_3bit.c  lcd_3bit.h  main.c  sd_hw_config.c  types.h  video.c  video.h
